[package]
name = "auth_proxy"
version = "1.0.0"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.21"
compound-error = "0.1.2"
log = "0.4"
femme = "2"
kv-log-macro = "1"
base64 = "0.13"
